# CubingAtHomeBot

./: .gitignore  LICENSE  README.md  client_secret.json  cube.ini  cube.service.empisbad  gmail.py  install.sh  main.py  output.py  pyproject.toml  sheets.py  stats.py  web.py
config/: cube.conf  cube.service  cube.service.save
static/: script.js  style.css
templates/: error.html  form.html  format.html  fsuccess.html  gen.html  index(1).html  index.html  input(1).html  input.html  link.html  success.html
